--- a/index.html
+++ b/index.html
@@ -19,146 +19,175 @@
 </head>
 
 <body>
-
     <header class="header">
-
-        <nav class="header-nav">
-            <a class="logo header-logo" href="./index.html">
-                Web<span class="logo-accent">Studio</span></a>
-            <ul class="header-list">
-                <li class="header-list-item"><a href="./index.html" class="header-list-link">Studio</a></li>
-                <li class="header-list-item"><a href="" class="header-list-link">Portfolio</a></li>
-                <li class="header-list-item"><a href="" class="header-list-link">Contacts</a></li>
-            </ul>
-        </nav>
-
-        <address class="header-address">
-            <ul class="header-address-list">
-                <li class="address-list-item"> <a class="address-list-link"
-                        href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="address-list-item"> <a class="address-list-link" href="tel:+110001111111">+11 (000)
-                        111-11-11</a>
-                </li>
-            </ul>
-        </address>
-
+        <div class="container header-container">
+            <nav class="header-nav">
+                <a class="logo header-logo" href="./index.html">
+                    Web<span class="logo-accent">Studio</span></a>
+                <ul class="header-list">
+                    <li class="header-list-item"><a href="./index.html" class="header-list-link">Studio</a></li>
+                    <li class="header-list-item"><a href="" class="header-list-link">Portfolio</a></li>
+                    <li class="header-list-item"><a href="" class="header-list-link">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="header-address">
+                <ul class="header-address-list">
+                    <li class="address-list-item"> <a class="address-list-link"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="address-list-item"> <a class="address-list-link" href="tel:+110001111111">+11 (000)
+                            111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
 
-    <main>
-        <section class="main">
-            <h1 class="main-title">Effective Solutions
-                for Your Business</h1>
-            <button class="main-button" type="button">Order Service</button>
-        </section>
-        <section class="features">
-            <h2 hidden>Features</h2>
-            <ul class="features-list">
-                <li class="features-list-item">
-                    <h3 class="features-subtitle">Strategy</h3>
-                    <p class="features-desc">Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.
-                    </p>
-                </li>
-                <li class="features-list-item">
-                    <h3 class="features-subtitle">Punctuality</h3>
-                    <p class="features-desc">Bring the key message to the brand's audience for the best price within the
-                        shortest possible
-                        time.
-                    </p>
-                </li>
-                <li class="features-list-item">
-                    <h3 class="features-subtitle">Diligence</h3>
-                    <p class="features-desc">Research and confirm brands with the strongest digital growth opportunities
-                        and minimize
-                        risk.
-                    </p>
-                </li>
-                <li class="features-list-item">
-                    <h3 class="features-subtitle">Technologies</h3>
-                    <p class="features-desc">Design practice focused on digital experiences. We bring forth a deep
-                        passion for
-                        problem-solving.
-                    </p>
-                </li>
-            </ul>
-        </section>
+    <main class="main">
+        <div class="container main-container ">
+            <section class="main-section">
+                <h1 class="main-section-title">Effective Solutions
+                    for Your Business</h1>
+                <button class="button main-button" type="button">Order Service</button>
+            </section>
+            <section class="features">
+                <h2 hidden>Features</h2>
+                <ul class="features-list">
+                    <li class="features-list-item">
+                        <h3 class="features-subtitle">Strategy</h3>
+                        <p class="features-desc">Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution.
+                        </p>
+                    </li>
+                    <li class="features-list-item">
+                        <h3 class="features-subtitle">Punctuality</h3>
+                        <p class="features-desc">Bring the key message to the brand's audience for the best price within
+                            the
+                            shortest possible
+                            time.
+                        </p>
+                    </li>
+                    <li class="features-list-item">
+                        <h3 class="features-subtitle">Diligence</h3>
+                        <p class="features-desc">Research and confirm brands with the strongest digital growth
+                            opportunities
+                            and minimize
+                            risk.
+                        </p>
+                    </li>
+                    <li class="features-list-item">
+                        <h3 class="features-subtitle">Technologies</h3>
+                        <p class="features-desc">Design practice focused on digital experiences. We bring forth a deep
+                            passion for
+                            problem-solving.
+                        </p>
+                    </li>
+                </ul>
+            </section>
 
-        <section class="team">
-            <h2 class="team-title">Our Team</h2>
-            <ul class="team-list">
-                <li class="team-list-item">
-                    <img src="./images/img-7.jpg" alt="Mark Guerrero" width="264" height="260" />
-                    <h3 class="team-subtitle">Mark Guerrero</h3>
-                    <p class="team-subtitle-desc">Product Designer</p>
-                </li>
+            <section class="team">
+                <div class="container team-container">
+                    <h2 class="team-title">Our Team</h2>
+                    <ul class="team-list">
+                        <li class="team-list-item">
+                            <img class="team-item-image" src="./images/img-7.jpg" alt="Mark Guerrero" width="264"
+                                height="260" />
+                            <div class="desc">
+                                <h3 class="team-subtitle">Mark Guerrero</h3>
+                                <p class="team-subtitle-desc">Product Designer</p>
+                            </div>
+                        </li>
 
-                <li class="team-list-item">
-                    <img src="./images/img-8.jpg" alt="Tom Ford" width="264" height="260" />
-                    <h3 class="team-subtitle">Tom Ford</h3>
-                    <p class="team-subtitle-desc">Frontend Developer</p>
-                </li>
+                        <li class="team-list-item">
+                            <img class="team-item-image" src="./images/img-8.jpg" alt="Tom Ford" width="264"
+                                height="260" />
+                            <div class="desc">
+                                <h3 class="team-subtitle">Tom Ford</h3>
+                                <p class="team-subtitle-desc">Frontend Developer</p>
+                            </div>
+                        </li>
 
-                <li class="team-list-item">
-                    <img src="./images/img-9.jpg" alt="Camila Garcia" width="264" height="260" />
-                    <h3 class="team-subtitle">Camila Garcia</h3>
-                    <p class="team-subtitle-desc">Marketing</p>
-                </li>
+                        <li class="team-list-item">
+                            <img class="team-item-image" src="./images/img-9.jpg" alt="Camila Garcia" width="264"
+                                height="260" />
+                            <div class="desc">
+                                <h3 class="team-subtitle">Camila Garcia</h3>
+                                <p class="team-subtitle-desc">Marketing</p>
+                            </div>
+                        </li>
 
-                <li class="team-list-item">
-                    <img src="./images/img-10.jpg" alt="Daniel Wilson" width="264" height="260" />
-                    <h3 class="team-subtitle">Daniel Wilson</h3>
-                    <p class="team-subtitle-desc">UI Designer</p>
-                </li>
-            </ul>
-        </section>
+                        <li class="team-list-item">
+                            <img class="team-item-image" src="./images/img-10.jpg" alt="Daniel Wilson" width="264"
+                                height="260" />
+                            <div class="desc">
+                                <h3 class="team-subtitle">Daniel Wilson</h3>
+                                <p class="team-subtitle-desc">UI Designer</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
 
-        <section class="portfolio">
-            <h2 class="portfolio-title">Our Portfolio</h2>
-            <ul class="portfolio-list">
-                <li class="portfolio-list-item">
-                    <img src="./images/img-1.jpg" width="360" height="300" alt="Banking App" />
-                    <h3 class="portfolio-subtitle">Banking App</h3>
-                    <p class="portfolio-subtitle-desc">App</p>
-                </li>
-                <li class="portfolio-list-item">
-                    <img src="./images/img-2.jpg" width="360" height="300" alt="Cashless Payment" />
-                    <h3 class="portfolio-subtitle">Cashless Payment</h3>
-                    <p class="portfolio-subtitle-desc">Marketing</p>
-                </li>
-                <li class="portfolio-list-item">
-                    <img src="./images/img-3.jpg" width="360" height="300" alt="Cashless Payment" />
-                    <h3 class="portfolio-subtitle">Meditation App</h3>
-                    <p class="portfolio-subtitle-desc">App</p>
-                </li>
+            <section class="portfolio">
+                <h2 class="portfolio-title">Our Portfolio</h2>
+                <ul class="portfolio-list">
+                    <li class="portfolio-list-item">
+                        <img class="card" src="./images/img-1.jpg" width="360" height="300" alt="Banking App" />
+                        <div class="card-desc">
+                            <h3 class="portfolio-subtitle">Banking App</h3>
+                            <p class="portfolio-subtitle-desc">App</p </div>
+                    </li>
+                    <li class="portfolio-list-item">
+                        <img class="card" src="./images/img-2.jpg" width="360" height="300" alt="Cashless Payment" />
+                        <div class="card-desc">
+                            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                            <p class="portfolio-subtitle-desc">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-list-item">
+                        <img class="card" src="./images/img-3.jpg" width="360" height="300" alt="Cashless Payment" />
+                        <div class="card-desc">
+                            <h3 class="portfolio-subtitle">Meditation App</h3>
+                            <p class="portfolio-subtitle-desc">App</p>
+                        </div>
+                    </li>
 
-                <li class="portfolio-list-item">
-                    <img src="./images/img-4.jpg" alt="Taxi Service" width="360" height="300" />
-                    <h3 class="portfolio-subtitle">Taxi Service</h3>
-                    <p class="portfolio-subtitle-desc">Marketing</p>
-                </li>
-                <li class="portfolio-list-item">
-                    <img src="./images/img-5.jpg" alt="Screen Illustrations" width="360" height="300" />
-                    <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-                    <p class="portfolio-subtitle-desc">Design</p>
-                </li>
-                <li class="portfolio-list-item">
-                    <img src="./images/img-6.jpg" alt="Online Courses" width="360" height="300" />
-                    <h3 class="portfolio-subtitle">Online Courses</h3>
-                    <p class="portfolio-subtitle-desc">Marketing</p>
-                </li>
-            </ul>
-        </section>
+                    <li class="portfolio-list-item">
+                        <img class="card" src="./images/img-4.jpg" alt="Taxi Service" width="360" height="300" />
+                        <div class="card-desc">
+                            <h3 class="portfolio-subtitle">Taxi Service</h3>
+                            <p class="portfolio-subtitle-desc">Marketing</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-list-item">
+                        <img class="card" src="./images/img-5.jpg" alt="Screen Illustrations" width="360"
+                            height="300" />
+                        <div class="card-desc">
+                            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                            <p class="portfolio-subtitle-desc">Design</p>
+                        </div>
+                    </li>
+                    <li class="portfolio-list-item">
+                        <img class="card" src="./images/img-6.jpg" alt="Online Courses" width="360" height="300" />
+                        <div class="card-desc">
+                            <h3 class="portfolio-subtitle">Online Courses</h3>
+                            <p class="portfolio-subtitle-desc">Marketing</p>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
-        <a class="footer-logo" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
-        <p class="footer-desc">
-            Increase the flow of customers and sales for your business with digital marketing & growth
-            solutions.
-        </p>
+        <div class="container footer-container">
+            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
+            <p class="footer-desc">
+                Increase the flow of customers and sales for your business with digital marketing & growth
+                solutions.
+            </p>
+        </div>
     </footer>
-
 </body>
 
 </html>
