--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@
     </header>
 
     <main class="main">
-        <div class="container main-container ">
-            <section class="main-section">
+        <section class="main-section">
+            <div class="container main-container ">
                 <h1 class="main-section-title">Effective Solutions
                     for Your Business</h1>
                 <button class="button main-button" type="button">Order Service</button>
-            </section>
-            <section class="features">
+        </section>
+        <section class="features">
+            <div class="container">
                 <h2 hidden>Features</h2>
                 <ul class="features-list">
                     <li class="features-list-item">
@@ -83,59 +84,61 @@
                         </p>
                     </li>
                 </ul>
-            </section>
+            </div>
+        </section>
 
-            <section class="team">
-                <div class="container team-container">
-                    <h2 class="team-title">Our Team</h2>
-                    <ul class="team-list">
-                        <li class="team-list-item">
-                            <img class="team-item-image" src="./images/img-7.jpg" alt="Mark Guerrero" width="264"
-                                height="260" />
-                            <div class="desc">
-                                <h3 class="team-subtitle">Mark Guerrero</h3>
-                                <p class="team-subtitle-desc">Product Designer</p>
-                            </div>
-                        </li>
+        <section class="team">
+            <div class="container">
+                <h2 class="team-title">Our Team</h2>
+                <ul class="team-list">
+                    <li class="team-list-item">
+                        <img class="team-item-image" src="./images/img-7.jpg" alt="Mark Guerrero" width="264"
+                            height="260" />
+                        <div class="desc">
+                            <h3 class="team-subtitle">Mark Guerrero</h3>
+                            <p class="team-subtitle-desc">Product Designer</p>
+                        </div>
+                    </li>
 
-                        <li class="team-list-item">
-                            <img class="team-item-image" src="./images/img-8.jpg" alt="Tom Ford" width="264"
-                                height="260" />
-                            <div class="desc">
-                                <h3 class="team-subtitle">Tom Ford</h3>
-                                <p class="team-subtitle-desc">Frontend Developer</p>
-                            </div>
-                        </li>
+                    <li class="team-list-item">
+                        <img class="team-item-image" src="./images/img-8.jpg" alt="Tom Ford" width="264" height="260" />
+                        <div class="desc">
+                            <h3 class="team-subtitle">Tom Ford</h3>
+                            <p class="team-subtitle-desc">Frontend Developer</p>
+                        </div>
+                    </li>
 
-                        <li class="team-list-item">
-                            <img class="team-item-image" src="./images/img-9.jpg" alt="Camila Garcia" width="264"
-                                height="260" />
-                            <div class="desc">
-                                <h3 class="team-subtitle">Camila Garcia</h3>
-                                <p class="team-subtitle-desc">Marketing</p>
-                            </div>
-                        </li>
+                    <li class="team-list-item">
+                        <img class="team-item-image" src="./images/img-9.jpg" alt="Camila Garcia" width="264"
+                            height="260" />
+                        <div class="desc">
+                            <h3 class="team-subtitle">Camila Garcia</h3>
+                            <p class="team-subtitle-desc">Marketing</p>
+                        </div>
+                    </li>
 
-                        <li class="team-list-item">
-                            <img class="team-item-image" src="./images/img-10.jpg" alt="Daniel Wilson" width="264"
-                                height="260" />
-                            <div class="desc">
-                                <h3 class="team-subtitle">Daniel Wilson</h3>
-                                <p class="team-subtitle-desc">UI Designer</p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </section>
+                    <li class="team-list-item">
+                        <img class="team-item-image" src="./images/img-10.jpg" alt="Daniel Wilson" width="264"
+                            height="260" />
+                        <div class="desc">
+                            <h3 class="team-subtitle">Daniel Wilson</h3>
+                            <p class="team-subtitle-desc">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
 
-            <section class="portfolio">
+        <section class="portfolio">
+            <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-list-item">
                         <img class="card" src="./images/img-1.jpg" width="360" height="300" alt="Banking App" />
                         <div class="card-desc">
                             <h3 class="portfolio-subtitle">Banking App</h3>
-                            <p class="portfolio-subtitle-desc">App</p </div>
+                            <p class="portfolio-subtitle-desc">App</p>
+                        </div>
                     </li>
                     <li class="portfolio-list-item">
                         <img class="card" src="./images/img-2.jpg" width="360" height="300" alt="Cashless Payment" />
@@ -175,12 +178,13 @@
                         </div>
                     </li>
                 </ul>
-            </section>
+            </div>
+        </section>
         </div>
     </main>
 
     <footer class="footer">
-        <div class="container footer-container">
+        <div class="container">
             <a class="footer-logo" href="./index.html">Web<span class="footer-logo-accent">Studio</span></a>
             <p class="footer-desc">
                 Increase the flow of customers and sales for your business with digital marketing & growth
