--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </section>
         <section class="features">
             <div class="container">
-                <h2 hidden>Features</h2>
+                <h2 class="vissualy-hidden">Features</h2>
                 <ul class="features-list">
                     <li class="features-list-item">
                         <h3 class="features-subtitle">Strategy</h3>
