--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
                 <button class="button main-button" type="button">Order Service</button>
             </div>
         </section>
+
         <section class="features">
             <div class="container">
-                <h2 class="vissualy-hidden">Features</h2>
+                <h2 class="visually-hidden">Features</h2>
                 <ul class="features-list">
                     <li class="features-list-item">
                         <h3 class="features-subtitle">Strategy</h3>
